objects/Profile_Settings__c.object
<CustomObject>
    <description>This is to save  settings of profile(show ,Hide)</description>
    <fields>
        <fullName>Additional_Company_Brouchers__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Additional Company Brouchers</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Additional_Company_videos__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Additional Company videos</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Any_non_WBENC_awards_received__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Any non-WBENC awards received</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>BBB_Number__c</fullName>
        <defaultValue>false</defaultValue>
        <label>BBB Number</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Business_Description__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Business Description</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Business_Duns_Number__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Business Duns Number</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Business_Established_Date__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Business Established Date</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Business_Revenue__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Business Revenue</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Business_Structure_Required__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Business_Structure_Required</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Business_Structure_Visible__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Business Structure Visible</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Business_Structure__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Business Structure</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Business_Tax_ID__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Business Tax ID</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Business_Type__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Business Type</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Cage_Code__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Cage Code</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Certificate_Processed_by_RPO__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Certificate Processed by RPO</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Certifications__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Certifications</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Commodities__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Commodities</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Company_Logo__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Company Logo</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Company_Name__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Company Name</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Companyhaveafacility_partneroutsideUSA__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Companyhaveafacility_partneroutsideUSA</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Contact_Image__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Contact Image</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Corporate_Additional_Company_Brouchers_R__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Corporate_Additional_Company_Brouchers_R</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Corporate_Additional_Company_Brouchers_V__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Corporate Additional Company Brouchers V</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Corporate_Additional_Company_videos_Reqi__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Corporate_Additional_Company_videos_Reqi</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Corporate_Additional_Company_videos_Visi__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Corporate Additional Company videos Visi</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Corporate_Address_1_Visible__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Corporate Address 1 Visible</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Corporate_Address_2_Visible__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Corporate Address 2 Visible</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Corporate_BBB_Number_Required__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Corporate_BBB_Number_Required</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Corporate_BBB_Number_Visible__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Corporate BBB Number Visible</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Corporate_Business_Description_Required__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Corporate Business Description Required</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Corporate_Business_Description_Visible__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Corporate Business Description Visible</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Corporate_Certificate_Processed_by_RPO_R__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Corporate_Certificate_Processed_by_RPO_R</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Corporate_Certificate_Processed_by_RPO_V__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Corporate Certificate Processed by RPO V</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Corporate_City_Visible__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Corporate City Visible</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Corporate_Commodities_Required__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Corporate_Commodities_Required</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Corporate_Commodities_Visible__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Corporate Commodities Visible</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Corporate_Company_Logo_Required__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Corporate_Company_Logo_Required</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Corporate_Company_Logo_Visible__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Corporate Company Logo Visible</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Corporate_Company_Required__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Corporate Company Required</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Corporate_Company_Visible__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Corporate Company Visible</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Corporate_Contact_Image_Required__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Corporate Contact Image Required</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Corporate_Contact_Image_Visible__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Corporate Contact Image Visible</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Corporate_Country_Visible__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Corporate Country Visible</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Corporate_DBA_Required__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Corporate DBA Required</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Corporate_DBA_Visible__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Corporate DBA Visible</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Corporate_Distributors_Country_Required__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Corporate_Distributors_Country_Required</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Corporate_Distributors_Country_Visible__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Corporate Distributors Country Visible</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Corporate_E_Mail_Required__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Corporate E_Mail Required</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Corporate_E_Mail_Visible__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Corporate E-Mail Visible</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Corporate_First_Name_Required__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Corporate First Name Required</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Corporate_First_Name_Visible__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Corporate First Name Visible</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Corporate_Geographical_Region_Required__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Corporate_Geographical_Region_Required</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Corporate_Geographical_Region_Visible__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Corporate Geographical Region Visible</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Corporate_Job_Title_Required__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Corporate Job_Title Required</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Corporate_Job_Title_Visible__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Corporate Job Title Visible</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Corporate_Location_Required__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Corporate_Location_Required</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Corporate_Location_Visible__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Corporate Location Visible</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Corporate_Logo_Visible__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Corporate Logo Visible</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Corporate_Manufactures_Country_Required__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Corporate_Manufactures_Country_Required</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Corporate_Manufactures_Country_Visible__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Corporate Manufactures Country Visible</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Corporate_Mobile_Phone_Required__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Corporate Mobile_Phone Required</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Corporate_Mobile_Phone_Visible__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Corporate Mobile Phone Visible</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Corporate_NAICS_CODES_Required__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Corporate NAICS_CODES Required</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Corporate_NAICS_CODES_Visible__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Corporate NAICS CODES Visible</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Corporate_Phone_Required__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Corporate Phone Required</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Corporate_Phone_Visible__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Corporate Phone Visible</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Corporate_Primary_Business_Category_Reqi__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Corporate Primary Business Category Reqi</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Corporate_Primary_Business_Category_Visi__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Corporate Primary Business Category Visi</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Corporate_Procurement_Required__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Corporate Procurement Required</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Corporate_Procurement_Visible__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Corporate Procurement Visible</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Corporate_Salutation_Required__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Corporate Salutation Required</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Corporate_Salutation_Visible__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Corporate Salutation Visible</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Corporate_Secondary_Business_Category_Re__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Corporate_Secondary_Business_Category_Re</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Corporate_Secondary_Business_Category_Vi__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Corporate Secondary Business Category Vi</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Corporate_State_Visible__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Corporate State Visible</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Corporate_Table_Room_No_Requi__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Corporate_Table_Room_No_Requi</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Corporate_Table_Room_No_Visible__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Corporate Table/Room No Visible</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Corporate_Website_Registration_Link_Reqi__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Corporate_Website_Registration_Link_Reqi</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Corporate_Website_Registration_Link_Vi__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Corporate Website / Registration Link Vi</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Corporate_Work_Address_Required__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Corporate Work_Address Required</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Corporate_Work_Address_Visible__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Corporate Work Address Visible</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Corporate_ZIP_Code_Visible__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Corporate ZIP Code Visible</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Corporate_exceptional_keywords_required__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Corporate_exceptional_keywords_required</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Corporate_exceptional_keywords_visible__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Corp exceptional keywords visible</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Country__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Country</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>DBA__c</fullName>
        <defaultValue>false</defaultValue>
        <label>DBA</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Distributors_Country__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Distributors Country</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Email_Id__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Email Id</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Ethnicity__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Ethnicity</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Event__c</fullName>
        <label>Event</label>
        <referenceTo>Event__c</referenceTo>
        <relationshipLabel>Profile Settings</relationshipLabel>
        <relationshipName>Profile_Settings</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>FaxNumber_Required__c</fullName>
        <defaultValue>false</defaultValue>
        <label>FaxNumber_Required</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FaxNumber_Visible__c</fullName>
        <defaultValue>true</defaultValue>
        <label>FaxNumber Visible</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FaxNumber__c</fullName>
        <defaultValue>true</defaultValue>
        <label>FaxNumber</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>First_Name__c</fullName>
        <defaultValue>false</defaultValue>
        <label>First Name</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>GSA_Schedule_Contract_Number__c</fullName>
        <defaultValue>false</defaultValue>
        <label>GSA Schedule Contract Number</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Geographical_Region__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Geographical Region</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Job_Title__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Job Title</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>KeyWords__c</fullName>
        <defaultValue>false</defaultValue>
        <label>KeyWords</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Last_Name__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Last Name</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Location__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Location</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>MBEAny_non_WBENC_awards_received_Require__c</fullName>
        <defaultValue>false</defaultValue>
        <label>MBEAny_non_WBENC_awards_received_Require</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>MBEAny_non_WBENC_awards_received_visible__c</fullName>
        <defaultValue>false</defaultValue>
        <label>MBEAny non-WBENC awards received visible</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>MBECompanyhavefacility_partneroutsideUSA__c</fullName>
        <defaultValue>false</defaultValue>
        <label>MBECompanyhavefacility_partneroutsideUSA</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>MBECompanypartneroutsideUSA_Required__c</fullName>
        <defaultValue>false</defaultValue>
        <label>MBECompanypartneroutsideUSA_Required</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>MBEScope_of_Work2_Visible__c</fullName>
        <defaultValue>false</defaultValue>
        <label>MBEScope of Work2 Visible</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>MBEScope_of_Work__c</fullName>
        <defaultValue>false</defaultValue>
        <label>MBEScope of Work Visible</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>MBE_Additional_Company_Brouchers_Require__c</fullName>
        <defaultValue>false</defaultValue>
        <label>MBE_Additional_Company_Brouchers_Require</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>MBE_Additional_Company_Brouchers_Visible__c</fullName>
        <defaultValue>true</defaultValue>
        <label>MBE Additional Company Brouchers Visible</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>MBE_Additional_Company_videos_Required__c</fullName>
        <defaultValue>false</defaultValue>
        <label>MBE_Additional_Company_videos_Required</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>MBE_Additional_Company_videos_Visible__c</fullName>
        <defaultValue>true</defaultValue>
        <label>MBE Additional Company videos Visible</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>MBE_Address_1_Visible__c</fullName>
        <defaultValue>true</defaultValue>
        <label>MBE Address 1 Visible</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>MBE_Address_2_Visible__c</fullName>
        <defaultValue>true</defaultValue>
        <label>MBE Address 2 Visible</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>MBE_BBB_Number_Required__c</fullName>
        <defaultValue>false</defaultValue>
        <label>MBE_BBB_Number_Required</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>MBE_BBB_Number_Visible__c</fullName>
        <defaultValue>true</defaultValue>
        <label>MBE BBB Number Visible</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>MBE_Business_Description_Required__c</fullName>
        <defaultValue>false</defaultValue>
        <label>MBE_Business_Description_Required</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>MBE_Business_Description_Visible__c</fullName>
        <defaultValue>true</defaultValue>
        <label>MBE Business Description Visible</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>MBE_Business_Duns_Number_Required__c</fullName>
        <defaultValue>false</defaultValue>
        <label>MBE_Business_Duns_Number_Required</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>MBE_Business_Duns_Number_Visible__c</fullName>
        <defaultValue>true</defaultValue>
        <label>MBE Business Duns Number Visible</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>MBE_Business_Established_Date_Required__c</fullName>
        <defaultValue>false</defaultValue>
        <label>MBE_Business_Established_Date_Required</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>MBE_Business_Established_Date_Visible__c</fullName>
        <defaultValue>true</defaultValue>
        <label>MBE Business Established Date Visible</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>MBE_Business_Revenue_Required__c</fullName>
        <defaultValue>false</defaultValue>
        <label>MBE_Business_Revenue_Required</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>MBE_Business_Revenue_Visible__c</fullName>
        <defaultValue>true</defaultValue>
        <label>MBE Business Revenue Visible</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>MBE_Business_Tax_ID_Required__c</fullName>
        <defaultValue>false</defaultValue>
        <label>MBE_Business_Tax_ID_Required</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>MBE_Business_Tax_ID_Visible__c</fullName>
        <defaultValue>true</defaultValue>
        <label>MBE Business Tax ID Visible</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>MBE_Business_Type_Required__c</fullName>
        <defaultValue>false</defaultValue>
        <label>MBE_Business_Type_Required</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>MBE_Business_Type_Visible__c</fullName>
        <defaultValue>true</defaultValue>
        <label>MBE Business Type Visible</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>MBE_Cage_Code_Required__c</fullName>
        <defaultValue>false</defaultValue>
        <label>MBE_Cage_Code_Required</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>MBE_Cage_Code_Visible__c</fullName>
        <defaultValue>true</defaultValue>
        <label>MBE Cage Code Visible</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>MBE_Certificate_Processed_by_RPO_Require__c</fullName>
        <defaultValue>false</defaultValue>
        <label>MBE_Certificate_Processed_by_RPO_Require</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>MBE_Certificate_Processed_by_RPO_Visible__c</fullName>
        <defaultValue>true</defaultValue>
        <label>MBE Certificate Processed by RPO Visible</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>MBE_Certifications_Required__c</fullName>
        <defaultValue>false</defaultValue>
        <label>MBE_Certifications_Required</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>MBE_Certifications_Visible__c</fullName>
        <defaultValue>true</defaultValue>
        <label>MBE Certifications Visible</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>MBE_City_Visible__c</fullName>
        <defaultValue>true</defaultValue>
        <label>MBE City Visible</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>MBE_Commodities_Required__c</fullName>
        <defaultValue>false</defaultValue>
        <label>MBE_Commodities_Required</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>MBE_Commodities_Visible__c</fullName>
        <defaultValue>true</defaultValue>
        <label>MBE Commodities Visible</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>MBE_Company_Logo_Required__c</fullName>
        <defaultValue>false</defaultValue>
        <label>MBE_Company_Logo_Required</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>MBE_Company_Logo_Visible__c</fullName>
        <defaultValue>true</defaultValue>
        <label>MBE Company Logo Visible</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>MBE_Company_Required__c</fullName>
        <defaultValue>false</defaultValue>
        <label>MBE_Company_Required</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>MBE_Company_Visible__c</fullName>
        <defaultValue>true</defaultValue>
        <label>MBE Company Visible</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>MBE_Country_Visible__c</fullName>
        <defaultValue>true</defaultValue>
        <label>MBE Country Visible</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>MBE_DBA_Required__c</fullName>
        <defaultValue>false</defaultValue>
        <label>MBE_DBA_Required</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>MBE_DBA_Visible__c</fullName>
        <defaultValue>true</defaultValue>
        <label>MBE DBA Visible</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>MBE_Distributors_Country_Required__c</fullName>
        <defaultValue>false</defaultValue>
        <label>MBE_Distributors_Country_Required</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>MBE_Distributors_Country_Visible__c</fullName>
        <defaultValue>true</defaultValue>
        <label>MBE Distributors Country Visible</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>MBE_Email_Required__c</fullName>
        <defaultValue>false</defaultValue>
        <label>MBE_Email_Required</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>MBE_Email_Visible__c</fullName>
        <defaultValue>true</defaultValue>
        <label>MBE Email Visible</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>MBE_Ethnicity_Required__c</fullName>
        <defaultValue>false</defaultValue>
        <label>MBE_Ethnicity_Required</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>MBE_Ethnicity_Visible__c</fullName>
        <defaultValue>true</defaultValue>
        <label>MBE Ethnicity Visible</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>MBE_First_Name_Required__c</fullName>
        <defaultValue>false</defaultValue>
        <label>MBE_First_Name_Required</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>MBE_First_Name_Visible__c</fullName>
        <defaultValue>true</defaultValue>
        <label>MBE First Name Visible</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>MBE_GSA_Schedule_Contract_Number_Require__c</fullName>
        <defaultValue>false</defaultValue>
        <label>MBE_GSA_Schedule_Contract_Number_Require</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>MBE_GSA_Schedule_Contract_Number_Visible__c</fullName>
        <defaultValue>true</defaultValue>
        <label>MBE GSA Schedule Contract Number Visible</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>MBE_Geographical_Region_Required__c</fullName>
        <defaultValue>false</defaultValue>
        <label>MBE_Geographical_Region_Required</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>MBE_Geographical_Region_Visible__c</fullName>
        <defaultValue>true</defaultValue>
        <label>MBE Geographical Region Visible</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>MBE_Job_Title_Visible__c</fullName>
        <defaultValue>true</defaultValue>
        <label>MBE Job Title Visible</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>MBE_LastName_Visible__c</fullName>
        <defaultValue>true</defaultValue>
        <label>MBE LastName Visible</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>MBE_Manufatures_Country_Required__c</fullName>
        <defaultValue>false</defaultValue>
        <label>MBE_Manufatures_Country_Required</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>MBE_Manufatures_Country_Visible__c</fullName>
        <defaultValue>true</defaultValue>
        <label>MBE Manufatures Country Visible</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>MBE_Mobile_Phone_Required__c</fullName>
        <defaultValue>false</defaultValue>
        <label>MBE_Mobile_Phone_Required</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>MBE_Mobile_Phone_Visible__c</fullName>
        <defaultValue>true</defaultValue>
        <label>MBE Mobile Phone Visible</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>MBE_NAICS_CODES_Required__c</fullName>
        <defaultValue>false</defaultValue>
        <label>MBE_NAICS_CODES_Required</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>MBE_NAICS_CODES_Visible__c</fullName>
        <defaultValue>true</defaultValue>
        <label>MBE NAICS CODES Visible</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>MBE_Number_Of_Employees_Required__c</fullName>
        <defaultValue>false</defaultValue>
        <label>MBE_Number_Of_Employees_Required</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>MBE_Number_Of_Employees_Visible__c</fullName>
        <defaultValue>true</defaultValue>
        <label>MBE Number Of Employees Visible</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>MBE_Primary_Business_Category_Required__c</fullName>
        <defaultValue>false</defaultValue>
        <label>MBE_Primary_Business_Category_Required</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>MBE_Primary_Business_Category_Visible__c</fullName>
        <defaultValue>true</defaultValue>
        <label>MBE Primary Business Category Visible</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>MBE_Procurement_Needs_Required__c</fullName>
        <defaultValue>false</defaultValue>
        <label>MBE_Procurement_Needs_Required</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>MBE_Procurement_Needs_Visible__c</fullName>
        <defaultValue>true</defaultValue>
        <label>MBE Procurement Needs Visible</label>
        <type>Checkbox</type>
    </fields>
</CustomObject>